# dpdata_ani

./: README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yaml
dpdata_ani/: aiqm1.py  ani1x.py  anidriver.py  comp6.py  odm2.py
tests/: anismall.hdf5  test_driver.py  test_format.py  test_odm2.py
