[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdata-ani"
dynamic = ["version"]
description = "The dpdata plugin for ANI."
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dpdata >=0.2.7",
    "torchani",
    "torch",
    "numpy",
    "h5py",
]
requires-python = ">=3.7"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/njzjz/dpdata_ani"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.entry-points."dpdata.plugins"]
anidriver = "dpdata_ani.anidriver:ANIDriver"
ani1xload = "dpdata_ani.ani1x:ANI1xFormat"
comp6load = "dpdata_ani.comp6:COMP6Format"
odm2driver = "dpdata_ani.odm2:ODM2Driver"

[tool.setuptools_scm]
